--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Hash your Password</h1>
@@ -22,5 +24,24 @@
         <button type="button" class="btn btn-primary" id="jsbtn">Send</button>
     </div>
 
+    <script defer>
+        document.addEventListener('DOMContentLoaded', () => {
+
+            const input = document.querySelector('#jsinput');
+            const btn = document.querySelector('#jsbtn');
+
+            btn.addEventListener('click', () => {
+                if (input.value == '') {
+                    alert('Type text');
+                } else {
+                    const xhr = new XMLHttpRequest();
+                    xhr.open('POST', '../index.js');
+                    xhr.send(input.value);
+                }
+            })
+        })
+    </script>
+
 </body>
+
 </html>
